name: threepenny-extra
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kylcarte@gmail.com
author: Kyle Carter

library
    exposed-modules:
        Test
        Graphics.UI.Threepenny.Widgets.DataTable
        Graphics.UI.Threepenny.Attributes.Extra
        Graphics.UI.Threepenny.Elements.ID
        Graphics.UI.Threepenny.Widgets.Plugins
        Reactive.Threepenny.Extra
        Graphics.UI.Threepenny.Extra
        Graphics.UI.Threepenny.Action
        Graphics.UI.Threepenny.DragNDrop.Extra
        Graphics.UI.Threepenny.Table
    build-depends:
        base >=4.8 && <4.9,
        aeson -any,
        bytestring -any,
        containers -any,
        contravariant -any,
        distributive -any,
        lens -any,
        lens-action -any,
        text -any,
        threepenny-gui >=0.6.0.4,
        uuid -any
    default-language: Haskell2010
    hs-source-dirs: src

